      done with a shadow instead.
    * The verify command now shows local changes on a local shadow instead
      of a local branch
    * Local changesets create diffs against a local shadow (instead of
      a branch) and --target for the commit command retargets to a shadow
    * User conaryrc entries are now searched from most specific target to
      least specific (bz #997)

  o Bug Fixes:
    * Conary will not traceback if you try to update to a trove with a name
      that matches a filesystem path that you don't have access to (bz #1010).
    * Conary will not raise an exception if a standard config file (~/.conaryrc,
      for example) exists but is not accessible.
    * cvc no longer allows . and .. to be added to source troves (bz #1014)
    * cvc remove handles removing directories (bz #1014)
    * conary rollback no longer tracebacks if you do not have write access to
      the conary database.

Changes in 1.0.13:
  o Client Changes:
    * A new "conary migrate" command for updating troves has been
      added.  "conary migrate" is useful for circumstances when you
      want to update the software state on a system to be synchronized
      with the default state of a group.  To do this, "conary migrate"
      calculates the changeset required to: 1) update the trove (if an
      update is available); 2) install any missing included troves; 3)
      synchronize included troves that have a mismatched version; 4)
      remove any referenced troves that are not installed by default.
    * The includeConfigFiles configuration directive now accepts http
      and https URLs.  This allows organizations to set up centralized
      site-wide conary configuration.
    * Conary now gives a more detailed error message when a changeset
      attempts to replace an empty directory with a file and
      --replace-files is not specified.

  o Build Changes:
    * The addSource source action will now replace existing files,